# :mode=cmake:indentSize=2:noTabs=true:tabSize=2:
# @brief FAST market data implementation
# FIX over FAST version of MarketData api

project(OpenUMDF_CC_MarketData_FAST)

#set(OpenUMDF_CC_MarketData_FAST_SOURCES
#  "book.cc"
#  "instrument.cc"
#  "instrument_mgr.cc"
#  "order_ent.cc"
#  "util.cc")

#add_library(openumdf-marketdata-fast STATIC
#  ${OpenUMDF_CC_MarketData_FAST_SOURCES})

# tests
#add_subdirectory("test")

